完成蘑菇的逻辑

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             }
         }
 
+        // 去重,用以计算 tilelayer 中的 layer 数
         function arrayDeweighting(arr) {
             let set = new Set(arr);
             return Array.from(set);
