增加 static 文件夹,生产环境复制 /resource 下的文件,添加 favicon.ico

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
-    <title>template</title>
+    <title>Phaser3 Mario</title>
+    <link rel="icon" href="resource/img/favicon.ico" type="image/x-icon" />
 
-
-    <!--<script src="../src/lib/vconsole.min.js" charset="utf-8"></script>-->
+    <!--<script src="static/vconsole.min.js" charset="utf-8"></script>-->
     <!--<script>-->
     <!--// init vConsole-->
     <!--var vConsole = new VConsole();-->
@@ -44,10 +44,10 @@
 
 <body>
 
-<script src="../src/lib/zepto.min.js"></script>
-<script src="../src/lib/phaser.min.v3.16.2.js"></script>
 
-<script src="../src/lib/flexible.min.js"></script>
+<script src="static/phaser.min.v3.16.2.js"></script>
+<script src="static/zepto.min.js"></script>
+<script src="static/flexible.min.js"></script>
 </body>
 
 </html>
