--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,8 @@
 <body>
 
 
-<script src="static/phaser.min.v3.16.2.js"></script>
+<!--<script src="static/phaser.min.v3.16.2.js"></script>-->
+<script src="static/phaser.v3.16.2.js"></script>
 <script src="static/zepto.min.js"></script>
 <script src="static/flexible.min.js"></script>
 </body>
